@@ -8,6 +8,7 @@
 * qt: ship more stable version of Qt on Windows (beevvy)
 * icons: removed lots of unused status icons (beevvy)
 * icons: fixed xmpp status icons in freedesktop notifications on GTK+-based platforms (beevvy)
+* sql_history: fixed chat history with anonymous contacts not being displayed (beevvy)
 
 +++ version 0.12.1
 * jabber: reconnect after waking up from suspend (Juzef)
